--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-11-15 [O] Modified util.php to reflect security improvements imposed by adding Inspekt {Frantz}
+2007-11-15 [O] Modified groupmgr to reflect security improvements imposed by adding Inspekt {Aditya}
 2007-11-14 [O] Modified index, thumbnails, displayimage, login, albmgr, catmgr to reflect security improvements imposed by adding Inspekt {Aditya}
 2007-11-02 [O] Modified help popup to reflect security improvements imposed by adding Inspekt {GauGau}
 2007-11-02 [A] Added Inspekt, a tool to create secure PHP application {Aditya}
