--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-11-22 [A] Added Serbian language file (user contribution) {GauGau}
 2007-11-15 [B] Corrected spelling of 'Favourites' in British English lang file {Nibbler}
 2007-11-15 [B] British English now recognised correctly {Nibbler}
 2007-11-15 [B] Compatibility fix for MyBB 1.2.9 {Nibbler}
