--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-11-28 [D] Added list of configurable items in theme.php to documentation {GauGau}
+2007-11-28 [O] Added default favicon (can of course be removed at will) {GauGau}
 2007-11-27 [O] Added new versioncheck scheme based on XML files (work in progress) {GauGau}
 2007-11-22 [D] Added (preliminary) Inspekt documentation {GauGau}
 2007-11-22 [D] Added lib.xml.php to the credits section {GauGau}
