Hiding empty IPTC fields as suggested in thread 48672
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4088 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-11-29 [O] Hiding empty IPTC fields as suggested in thread 48672 {GauGau}
 2007-11-22 [A] Added Serbian language file (user contribution) {GauGau}
 2007-11-15 [B] Corrected spelling of 'Favourites' in British English lang file {Nibbler}
 2007-11-15 [B] British English now recognised correctly {Nibbler}
