--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-12-02 [B] Fixed subcategory depth issue {Nibbler}
 2007-11-30 [A] Added Estonian language file (user contribution) {GauGau}
 2007-11-29 [M] Populated SVN-property "HeadURL" {GauGau}
 2007-11-29 [M] Updated version count from cpg1.4.14 to cpg1.4.15 in subversion repository as a preparation for a possible future release {GauGau}
