--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-12-14 [B] Fixed parent category on category-edit {SaWey}
+2007-12-14 [A] Added posibility for users to create albums in admin allowed categories {SaWey}
 2007-12-02 [S] Added code to avoid the direct execution of slideshow.inc.php {Aditya}
 2007-12-08 [B] The CSS used for middlethumb class for filmstrip was not working. Fixed it (related to thread 48803) {Abbas}
 2007-12-06 [A] Added separate CSS class for filmstrip thumb that represents actual image (thread id 48803) {GauGau}
