Modified report_file to reflect security improvents imposed by Inspekt
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4138 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,7 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2007-12-15 [O] Modified displayreport to reflect security improvents imposed by Inspekt {Frantz}
+2007-12-17 [O] Modified report_file to reflect security improvents imposed by Inspekt {Aditya}
+2007-12-17 [O] Modified displayreport to reflect security improvents imposed by Inspekt {Frantz}
 2007-12-15 [B] Fixed some permissions on user creatable albums {SaWey}
 2007-12-15 [O] Modified forgot_passwd to reflect security improvents imposed by Inspekt {Aditya}
 2007-12-15 [A] Added auto check of internal/external links in bbcode + add rel="external nofolow" accordingly and removed [iurl] option {SaWey}
