--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-12-17 [B] Corrected the bug reported in 49059 regarding display of dialog box for unlogged users {Aditya}
 2007-12-17 [O] Modified report_file to reflect security improvents imposed by Inspekt {Aditya}
 2007-12-17 [O] Modified displayreport to reflect security improvents imposed by Inspekt {Frantz}
 2007-12-15 [B] Fixed some permissions on user creatable albums {SaWey}
