- Added preliminary documentation for Javascript in coppermine - Work in progress
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4200 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-01-08 [D] Added (preliminary) JavaScript documentation {Abbas}
 2008-01-07 [O] Added two new functions js_include and set_js_vars which can be used in php to include js files and set js variables. {Abbas}
 2008-01-06 [B] Removed 'banned' group from selection of user creatable albums {SaWey}
 2008-01-06 [B] Not able to upload to albums that aren't in any category {SaWey}
