--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-01-24 [D] Added section of how to use superglobals in plugin_writing.htm {SaWey}
+2008-01-24 [O] Modified search.inc, xp_publish, viewlog, index, picmgr, update, viewlog, thumbnails and visiblehookpoints-plugin to reflect security improvents imposed by Inspekt {SaWey}
 2008-01-09 [A] Added ajax filmstrip feature {Abbas}
 2008-01-09 [A] Added jQuery1.2.1 library (packed) {Abbas}
 2008-01-08 [D] Added (preliminary) JavaScript documentation {Abbas}
