--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-02 [M] Release of cpg1.4.16 {GauGau}
 2008-02-02 [M] Updated version count from cpg1.4.15 to cpg1.4.16 in subversion repository as a preparation for the next release {GauGau}
 2008-02-01 [B] Reverted incorrect escapeshellarg() additions {Nibbler}
 2008-01-30 [M] Release of cpg1.4.15 {GauGau}
