Fixed typo in SMF 2 bridge file
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4249 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-05 [B] Fixed typo in SMF 2 bridge file {Nibbler}
 2008-02-04 [A] Added "Filename => Filetitle" only apply for empty filename fields in util.php. {Frantz}
 2008-02-04 [A] Added allowed filetypes message on upload. {Frantz}
 2008-02-03 [O] Added custom cpg_getimagesize function. {SaWey}
