--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-07 [C] Added nicer album drop down in modifyalb.php {SaWey}
+2008-02-07 [B] Fixed users not able to go to modifyalb.php when no album is set in super globals {SaWey}
 2008-02-07 [C] Changed all needed files to lowercase {Frantz & SaWey}
 2008-02-06 [A] Added login method to config, possible to set it to username, email address or both. {SaWey}
 2008-02-05 [B] Fixed typo in SMF 2 bridge file {Nibbler}
