Added onlinestats plugin
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4257 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-10 [A] Added onlinestats plugin {GauGau}
 2008-02-09 [A] Added OpenSearch plugin {GauGau}
 2008-02-09 [O] Modified the code in picmgr.php to reflect security improvents imposed by Inspekt {SaWey}
 2008-02-07 [C] Added nicer album drop down in modifyalb.php {SaWey}
