--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-11 [B] Removing column comments for compatibility {Nibbler}
 2008-02-10 [A] Added onlinestats plugin {GauGau}
 2008-02-09 [A] Added OpenSearch plugin {GauGau}
 2008-02-09 [O] Modified the code in picmgr.php to reflect security improvents imposed by Inspekt {SaWey}
