--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-12 [B] Fixed language drop down bug and changed folder permission check in new installer {SaWey}
 2008-02-12 [B] Fixed mysql warning in update.php {SaWey}
 2008-02-12 [B] Fixed not able to go to 'My Profile' {SaWey}
 2008-01-11 [B] Fixing 'edipic.php problem for approval' issue {Nibbler}
