Fixed function cpgGetScriptNameParams that has been inspektified improperly (did not return file names at all)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4290 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-21 [B] Fixed function cpgGetScriptNameParams that has been Inspektified improperly (did not return file names at all) {GauGau}
 2008-02-21 [A] Added basic authentication to update script {SaWey}
 2008-02-20 [M] Renamed plain text files in root folder to enable Windows-users to read it easily {GauGau}
 2008-02-20 [M] Renamed warning files within edit and userpics folder to make sure that operating systems don't confuse those files with folders {GauGau}
