Voting is now customizable in max- and min rate + ajax enabled
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4294 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-25 [A] Voting is now customizable in max- and min rate + ajax enabled {SaWey}
 2008-02-21 [O] Inspektified all bridge files {SaWey}
 2008-02-21 [B] Fixed function cpgGetScriptNameParams that has been Inspektified improperly (did not return file names at all) {GauGau}
 2008-02-21 [A] Added basic authentication to update script {SaWey}
