--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-26 [D] Updated versioncheck documentation to reflect changes in the core file behaviour {GauGau}
 2008-02-26 [C] Replaced inline stat_details with popup {SaWey}
 2008-02-25 [A] Voting is now customizable in max- and min rate + ajax enabled {SaWey}
 2008-02-21 [O] Inspektified all bridge files {SaWey}
