Changed date formats in lang files for better windows compatibility
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4310 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-02-29 [B] Changed date formats in lang files for better windows compatibility {Nibbler}
 2008-02-12 [O] Updated Romanian language file (user contribution) {GauGau}
 2008-02-07 [A] Added Latvian language file (user contribution) {GauGau}
 2008-02-04 [B] ImageMagick rotate bug fix {Nibbler}
