Removed length restriction for the album password hint
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4327 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-03-09 [B] Removed length restriction for the album password hint {Nibbler}
 2008-03-09 [A] Added options to disable file and album hit counters {Nibbler}
 2008-03-08 [A] Added export feature (gsoc2007 - drhammond) {Nibbler}
 2008-03-06 [C] Fixing notice in social bookmarking code {Nibbler}
