--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-03-19 [A] Added Welsh language file (user contribution) {Nibbler}
 2008-03-02 [M] Updated version count from cpg1.4.16 to cpg1.4.17 in subversion repository as a preparation for a possible future release {GauGau}
 2008-02-29 [B] Changed date formats in lang files for better windows compatibility {Nibbler}
 2008-02-12 [O] Updated Romanian language file (user contribution) {GauGau}
