--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-03-29 [A] Added versioncheck to the installer {SaWey}
 2008-03-16 [D] Added document about the export feature {GauGau}
 2008-03-09 [B] Removed length restriction for the album password hint {Nibbler}
 2008-03-09 [A] Added options to disable file and album hit counters {Nibbler}
