--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,8 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2008-03-20 [A] Changed versioncheck to work with the installer-class + minor cosmetical fixes in source {SaWey}
-2008-03-20 [A] Fixed some typos I introduced {SaWey}
+2008-03-20 [O] Changed versioncheck to work with the installer-class + minor cosmetical fixes in source {SaWey}
+2008-03-20 [B] Fixed some typos I introduced {SaWey}
 2008-03-19 [A] Added versioncheck to the installer {SaWey}
 2008-03-16 [D] Added document about the export feature {GauGau}
 2008-03-09 [B] Removed length restriction for the album password hint {Nibbler}
