--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-03-21 [O] Removed 'root template' feature {Nibbler}
 2008-03-20 [O] Changed versioncheck to work with the installer-class + minor cosmetical fixes in source {SaWey}
 2008-03-20 [B] Fixed some typos I introduced {SaWey}
 2008-03-19 [A] Added versioncheck to the installer {SaWey}
