--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
+2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
 2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
 2008-04-28 [O] Updated Danish language file (user contribution) {GauGau}
 2008-04-16 [M] Updated version count from cpg1.4.18 to cpg1.4.19 in subversion repository as a preparation for a possible future release {GauGau}
