Removed invalid <f>-tag. Populating undefined form elements. Fixed improper nesting of form element.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4426 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
+2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
 2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
 2008-04-14 [O] Numerous session handling optimizations {Nibbler}
 2008-04-13 [S] Corrected SQL injection vulnerabilities in session handling code {Nibbler}
