--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -1,13 +1,12 @@
 ************************
 Coppermine Photo Gallery
 ************************
-Copyright (c) 2003-2008 Coppermine Dev Team
+Copyright (c) 2003-2008 Dev Team
 v1.1 originally written by Gregory DEMAR
 
 This program is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2 of the License, or
-(at your option) any later version.
+it under the terms of the GNU General Public License version 3
+as published by the Free Software Foundation.
 ********************************************
 Coppermine version: 1.5.0
 $Source$
@@ -26,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-05-01 [O] Optimization of sanitization of strip-Tags and max. length for comments {GauGau}
 2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
 2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
 2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
