--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-05-03 [B] Fixing the type being translated in reports {GauGau}
 2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
 2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
 2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
