--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-03 [O] Removed switch for allowing unencrypted user passwords in the database, as this used to be an outdated feature in cpg1.3.x and older. Since there is no longer support for cpg1.3.x, this feature can easily be dropped {GauGau}
 2008-05-26 [D] Created sub-folders in docs folder to prepare translation of documentation {GauGau}
 2008-05-23 [O] Use JavaScript to display the sorting options only to humans, but hide them from search engines to avoid double-content indexing {GauGau}
 2008-05-21 [B] Replaced hard-coded string "edit keywords" with translation (thread ID 52721) {GauGau}
