--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-06 [B] Fixed selecting thumbnail from albums with only linked images showing un-approved images {Paver}
+2008-06-06 [B] Fixed/adjusted Admin Tools, Filename->Title, 4 options plus broken "only empty titles" {Paver}
 2008-06-06 [A] Added 'move to top/bottom' in category and album managers {Paver}
 2008-06-03 [O] Removed switch for allowing unencrypted user passwords in the database, as this used to be an outdated feature in cpg1.3.x and older. Since there is no longer support for cpg1.3.x, this feature can easily be dropped {GauGau}
 2008-05-26 [D] Created sub-folders in docs folder to prepare translation of documentation {GauGau}
