Added 'move to top/bottom' in picmgr.php, contribution by Frantz/Paver
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4507 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-08 [A] Added 'move to top/bottom' in picture manager {Paver for Frantz}
 2008-06-06 [B] Fixed selecting thumbnail from albums with only linked images showing un-approved images {Paver}
 2008-06-06 [B] Fixed/adjusted Admin Tools, Filename->Title, 4 options plus broken "only empty titles" {Paver}
 2008-06-06 [A] Added 'move to top/bottom' in category and album managers {Paver}
