--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,9 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-12 [C] Added alternating table rows to updater {GauGau}
+2008-06-12 [O] Fixed broken debug mode for updater due to Inspekt sanitization {GauGau}
+2008-06-12 [D] Added dev document for the updater to explain the hidden debug feature {GauGau}
 2008-06-10 [B] Fixed plugin manager when plugin API is disabled (thread ID 46155) {Paver}
 2008-06-08 [A] Added 'move to top/bottom' in picture manager {Paver for Frantz}
 2008-06-06 [B] Fixed selecting thumbnail from albums with only linked images showing un-approved images {Paver}
