--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-12 [B] Fixed bug in thumb size output for search results of categories & albums {Paver}
 2008-06-12 [C] Added alternating table rows to updater {GauGau}
 2008-06-12 [O] Fixed broken debug mode for updater due to Inspekt sanitization {GauGau}
 2008-06-12 [D] Added dev document for the updater to explain the hidden debug feature {GauGau}
