New category heirarchy system.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4578 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-15 [A] New category heirarchy system {Nibbler}
 2008-06-12 [B] Fixed bug in thumb size output for search results of categories & albums {Paver}
 2008-06-12 [C] Added alternating table rows to updater {GauGau}
 2008-06-12 [O] Fixed broken debug mode for updater due to Inspekt sanitization {GauGau}
