Cleaned up code, indentation for multiple files Consolidated and cleaned up language variables Added comments "TO DO" for things found that need work (bugs & otherwise)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4583 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-17 [C] Cleaned up code, indentation for multiple files {Paver}
+2008-06-17 [O] Consolidated and cleaned up language variables {Paver}
 2008-06-15 [A] New category heirarchy system {Nibbler}
 2008-06-12 [B] Fixed bug in thumb size output for search results of categories & albums {Paver}
 2008-06-12 [C] Added alternating table rows to updater {GauGau}
