- Added formatting instructions in coding guidelines documentation.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4646 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-06-28 [D] Added formatting instructions in coding guidelines {Abbas}
 2008-06-28 [B] Fixed the typo bug in editpics and star rating info calculation in functions.inc {Abbas}
 2008-06-27 [D] Added coding guidelines to documentation {GauGau}
 2008-06-19 [A] New javascript based multi-processing queue for batch add {Nibbler}
